[feature][bug] (abc-539): hooks for spacing, link colors, icon colors - try to add media actions but it's overflow hidden

--- a/src/modules/base/list/list.css
+++ b/src/modules/base/list/list.css
@@ -34,17 +34,50 @@
     max-height: 100%;
 }
 
-.avonni-list__item-spacing-none {
-    --item-gap: 0rem;
+/* VALUE ASSIGNMENTS */
+.avonni-list__items-without-divider {
+    --item-spacing-block-between: var(--avonni-list-item-spacing-block-between, 0px);
+    --item-spacing-inline-between: var(
+        --avonni-list-item-spacing-inline-between,
+        0px
+    );
 }
-.avonni-list__item-spacing-small {
-    --item-gap: 0.5rem;
+.avonni-list__items-have-top-divider {
+    --item-spacing-block-between: var(
+        --avonni-list-item-divider-top-spacing-block-between,
+        0px
+    );
+    --item-spacing-inline-between: var(
+        --avonni-list-item-divider-top-spacing-inline-between,
+        0px
+    );
 }
-.avonni-list__item-spacing-medium {
-    --item-gap: 0.75rem;
+.avonni-list__items-have-bottom-divider {
+    --item-spacing-block-between: var(
+        --avonni-list-item-divider-bottom-spacing-block-between,
+        0px
+    );
+    --item-spacing-inline-between: var(
+        --avonni-list-item-divider-bottom-spacing-inline-between,
+        0px
+    );
 }
-.avonni-list__item-spacing-large {
-    --item-gap: 1.5rem;
+.avonni-list__has-card-style {
+    --item-spacing-block-between: var(
+        --avonni-list-item-divider-around-spacing-block-between,
+        0.5rem
+    );
+    --item-spacing-inline-between: var(
+        --avonni-list-item-divider-around-spacing-inline-between,
+        0.5rem
+    );
+    --avonni-card-shadow: none;
+    --avonni-card-sizing-border: 1px;
+}
+
+.avonni-list__item-menu {
+    row-gap: var(--item-spacing-block-between);
+    margin-inline: calc(var(--item-spacing-inline-between) / -2);
 }
 
 .avonni-list__item {
@@ -53,6 +86,8 @@
         --avonni-list-item-color-background,
         transparent
     );
+    padding-left: calc(var(--item-spacing-inline-between) / 2);
+    padding-right: calc(var(--item-spacing-inline-between) / 2);
     --avonni-card-header-spacing-block-start: 0px;
     --avonni-card-header-spacing-block-end: 0px;
     --avonni-card-media-sizing-border: 0px;
@@ -60,41 +95,11 @@
     --avonni-card-body-spacing-block-end: 0px;
 }
 
-.avonni-list__item-menu {
-    row-gap: var(
-        --avonni-list-item-spacing-block-between,
-        var(--item-gap, 0rem)
-    );
-}
-
 .avonni-list-item-body {
     padding-left: var(--avonni-list-item-spacing-inline-start, 0.5rem);
     padding-right: var(--avonni-list-item-spacing-inline-end, 0.5rem);
-    padding-top: var(--avonni-list-item-spacing-block-start, 0.25rem);
-    padding-bottom: var(--avonni-list-item-spacing-block-end, 0.25rem);
-}
-
-.avonni-list__has-card-style {
-    row-gap: var(
-        --avonni-list-item-spacing-block-between,
-        var(--item-gap, 0.5rem)
-    );
-    margin-inline: calc(
-        var(--avonni-list-item-spacing-inline-between, var(--item-gap, 0.5rem)) /
-            -2
-    );
-    --avonni-card-sizing-border: 1px;
-}
-
-.avonni-list__has-card-style .avonni-list__item-gutters {
-    padding-left: calc(
-        var(--avonni-list-item-spacing-inline-between, var(--item-gap, 0.5rem)) /
-            2
-    );
-    padding-right: calc(
-        var(--avonni-list-item-spacing-inline-between, var(--item-gap, 0.5rem)) /
-            2
-    );
+    padding-top: var(--avonni-list-item-spacing-block-start, 0.5rem);
+    padding-bottom: var(--avonni-list-item-spacing-block-end, 0.5rem);
 }
 
 .avonni-list__item-sortable {
@@ -113,7 +118,7 @@
 
 .avonni-list__header_font {
     color: var(--avonni-list-header-text-color, #080707);
-    font-size: var(--avonni-list-header-font-size, 14px);
+    font-size: var(--avonni-list-header-font-size, 0.875rem);
     font-style: var(--avonni-list-header-font-style, normal);
     font-weight: var(--avonni-list-header-font-weight, 400);
     line-height: var(--avonni-list-header-line-height, 1.25);
@@ -127,13 +132,13 @@
     height: 30px;
 }
 
-.avonni-list__page-change-buttons {
+.avonni-list__page-change-button-container {
     position: relative;
     min-width: 30px;
     max-width: 30px;
 }
 
-.avonni-list__page-change-buttons > .avonni-list__page-change-button {
+.avonni-list__page-change-button {
     position: absolute;
     transform: translateY(-50%);
     top: 50%;
@@ -158,13 +163,6 @@
             var(--avonni-list-item-color-background-hover, #f3f2f2)
         );
     }
-}
-.avonni-list__item-sortable > div {
-    width: 100%;
-}
-
-.avonni-list__item-expanded > div {
-    width: 100%;
 }
 
 .avonni-list__item-action-image-top-right {
@@ -198,10 +196,6 @@
     width: 100%;
     object-fit: cover;
     pointer-events: none;
-    padding-top: var(--avonni-list-item-image-spacing-block-start, 0px);
-    padding-bottom: var(--avonni-list-item-image-spacing-block-end, 0px);
-    padding-left: var(--avonni-list-item-image-spacing-inline-start, 0px);
-    padding-right: var(--avonni-list-item-image-spacing-inline-end, 0px);
     background-color: var(--avonni-list-item-image-color-background);
 }
 
@@ -224,24 +218,61 @@
     );
 }
 
-.avonni-list__item-divider_top {
-    --avonni-card-shadow: none;
-    --avonni-card-sizing-border: 0px;
+.avonni-list__item-icons {
+    --slds-c-icon-color-background: var(--avonni-list-item-icon-color-background, transparent);
+    --slds-c-icon-color-foreground: var(--avonni-list-item-icon-color-foreground, #747474);
+    --slds-c-icon-color-foreground-default: var(--avonni-list-item-icon-color-foreground-default, #747474);
+    --slds-c-icon-radius-border: var(--avonni-list-item-icon-radius-border, 0.25rem);
+}
+
+a {
+    --base-link-color: #0176d3;
+    --hover-and-active-link-color: #014486;
+}
+
+/* LINK COLORS */
+a.avonni-list__item-header-link {
+    color: var(--avonni-list-header-link-text-color, var(--base-link-color));
+}
+a.avonni-list__item-header-link:hover,
+a.avonni-list__item-header-link:focus {
+    color: var(
+        --avonni-list-header-link-text-color-hover,
+        var(--hover-and-active-link-color)
+    );
+}
+a.avonni-list__item-header-link:active {
+    color: var(
+        --avonni-list-header-link-text-color,
+        var(--hover-and-active-link-color)
+    );
+}
+
+a.avonni-list__item-info-link {
+    color: var(--avonni-list-infos-link-text-color, var(--base-link-color));
+}
+a.avonni-list__item-info-link:hover,
+a.avonni-list__item-info-link:focus {
+    color: var(
+        --avonni-list-infos-link-text-color-hover,
+        var(--hover-and-active-link-color)
+    );
+}
+a.avonni-list__item-info-link {
+    color: var(
+        --avonni-list-infos-link-text-color-active,
+        var(--hover-and-active-link-color)
+    );
+}
+
+.avonni-list__item-divider_top,
+.avonni-list__item-divider_bottom {
     border-top-width: var(--avonni-list-item-sizing-border, 1px);
     border-top-style: var(--avonni-list-item-styling-border, solid);
     border-top-color: var(--avonni-list-item-color-border, #dddbda);
 }
 
-.avonni-list__item-divider_bottom {
-    --avonni-card-shadow: none;
-    --avonni-card-sizing-border: 0px;
-    border-bottom-width: var(--avonni-list-item-sizing-border, 1px);
-    border-bottom-style: var(--avonni-list-item-styling-border, solid);
-    border-bottom-color: var(--avonni-list-item-color-border, #dddbda);
-}
-
 .avonni-list__item-header_font {
-    --avonni-card-sizing-border: 0px;
     color: var(--avonni-list-item-header-text-color, #080707);
     font-size: var(--avonni-list-item-header-font-size, 0.8125rem);
     font-style: var(--avonni-list-item-header-font-style, normal);
